style: Add smooth scroll to sections

--- a/src/components/Association.astro
+++ b/src/components/Association.astro
@@ -34,6 +34,7 @@ const members = MembersList.sort((a, b) => a.name.localeCompare(b.name))
         background-image: var(--background);
         @include full-width-background-color(var(--association-bg-color));
         padding: var(--spacing) 0;
+        scroll-margin-top: 1.5em;
 
         > div {
             @include max-width(var(--max-width-content));
