--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -51,6 +51,7 @@ const translations = Translations[locale as keyof typeof Translations].contact
     #contact {
         @include max-width(var(--max-width-content));
         padding: var(--spacing) 0;
+        scroll-margin-top: 1.5em;
 
         h2 {
             text-shadow: #393939 0 0 12px;
