--- a/src/components/Productions.astro
+++ b/src/components/Productions.astro
@@ -18,6 +18,7 @@ const productions = ProductionsList.sort((a, b) => new Date(b.createdAt).getTime
         @include max-width(var(--max-width-content));
         @include full-width-background-color(var(--bg-color));
         padding: var(--spacing) 0;
+        scroll-margin-top: 1.5em;
 
         > div {
             padding: 0;
