style: Background image position on large screen

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -153,6 +153,9 @@ const title = "Studio Rv & Co"
 			main {
 				background-image: var(--background);
 				background-attachment: fixed;
+				background-size: cover;
+				background-position: center;
+				background-repeat: no-repeat;
 				scroll-margin-top: 4em;
 			}
 
