test: Add components

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -24,7 +24,7 @@ const translations = Translations[locale as keyof typeof Translations].contact
                 <a href="https://youtube.com/@studiorvandco" title="YouTube">
                     <Icon name={"fa6-brands:youtube"} />
                 </a>
-                <a href="https://twitter.com/studiorvandco" title="Twitter">
+                <a href="https://x.com/studiorvandco" title="X">
                     <Icon name={"fa6-brands:x-twitter"} />
                 </a>
                 <a href="https://instagram.com/studiorvandco" title="Instagram">
