refactor: Load same page with different lang

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -1,14 +1,5 @@
 ---
-import Layout from '@layouts/Layout.astro'
-import Teaser from '@components/Teaser.astro'
-import Productions from '@components/Productions.astro'
-import Association from '@components/Association.astro'
-import Contact from '@components/Contact.astro'
+import MainPage from '@pages/index.astro'
 ---
 
-<Layout>
-	<Teaser />
-	<Productions />
-	<Association />
-	<Contact />
-</Layout>
+<MainPage />
