style: Increase spacing between productions

--- a/src/components/list/Production.astro
+++ b/src/components/list/Production.astro
@@ -20,7 +20,7 @@ const thumbnail = Object.values(productionThumbnails)
         flex-flow: row nowrap;
         align-items: center;
         gap: 4rem;
-        margin-bottom: 4rem;
+        margin-bottom: var(--spacing);
 
         &:first-of-type {
             h3 {
