--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -70,6 +70,7 @@ const translations = Translations[locale as keyof typeof Translations].header
                     cursor: pointer;
                     width: 26px;
                     height: 26px;
+                    margin-right: 1rem;
                 }
 
                 section div {
