--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '@layouts/Layout.astro'
+import TwitchLivestreamToast from '@components/TwitchLivestreamToast.astro'
 import Teaser from '@components/Teaser.astro'
 import Productions from '@components/Productions.astro'
 import Projects from '@components/Projects.astro'
@@ -8,6 +9,7 @@ import Contact from '@components/Contact.astro'
 ---
 
 <Layout>
+	<TwitchLivestreamToast />
 	<Teaser />
 	<Productions />
 	<Projects />
